# Spine-Forge-X

./: .env.example  .firebaserc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SpineForge_Design_Doc.md  firestore.rules  index.html  package-lock.json  package.json  storage.rules  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.kiro/specs/spineforge-x/: .config.kiro  design.md  requirements.md  tasks.md
docs/: ROADMAP.md  SpineForge_Design_Doc.md  UI-UX-Review.md  clean-source.md  firebase-setup.md  library-sidecar-firestore.md  linked-project.md  notes-comment-feature.md  research-padding-not-decoded.md  review_ui_ux.md  spine-hub-tier-c.md  sync.md  ui-design-rules.md  web-viewer.md
public/spine-player-3.8/: NOTICE.txt  spine-player.js
scripts/: check-file-size.mjs
src/: App.tsx  config.ts  controllerHelpers.ts  drive.test.ts  drive.ts  exportRequest.ts  firebase.ts  fonts.css  i18n.ts  l2log.ts  library.notes.test.ts  library.test.ts  library.ts  libraryMetaSync.test.ts  libraryMetaSync.ts  listContinuation.test.ts  listContinuation.ts  main.tsx  notifications.test.ts  notifications.ts  paths.test.ts  paths.ts  roles.test.ts  roles.ts  sessionStatus.ts  sessions.test.ts  sessions.ts  slider.css  spineRuntime.ts  styles.css  sync.firestore.test.ts  sync.test.ts  sync.ts  test-setup.ts  time.test.ts  time.ts  toggle.css  types.ts  useAppController.test.tsx  useAppController.tsx  (+27 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/export-presets/: binary-pack.export.json  json-pack.export.json
src-tauri/icons/: icon.icns
src-tauri/src/: clean.rs  cleaner.rs  concurrent.rs  drive.rs  error.rs  export.rs  health.rs  lib.rs  library.rs  main.rs  model.rs  paths.rs  presets.rs  skel_binary.rs  spine_project.rs  spine_project_tests.rs  system.rs  tests.rs  tray.rs  util.rs
src-tauri/src/drive/: auth.rs  changes.rs  mod.rs
src/components/: AccountBadge.css  AccountBadge.tsx  CleanFolderDetailModal.tsx  CleanSourceFolderModal.tsx  DropOverlay.css  DropOverlay.tsx  GoogleDriveIcon.tsx  LibraryCardThumb.tsx  LibraryClean.tsx  LibraryDashboardModal.css  LibraryDashboardModal.tsx  LibraryDriveHistoryModal.tsx  LibraryDriveInfoRow.tsx  LibraryFilters.css  LibraryGrid.css  LibraryGrid.tsx  LibraryHealthCheckModal.css  LibraryHealthCheckModal.tsx  LibraryInspector.css  LibraryInspector.tsx  LibraryInventory.tsx  LibraryInventoryModals.tsx  LibraryMeta.css  LibraryOwnerCell.tsx  LibraryPreviewCell.tsx  LibraryReports.css  LibraryReports.tsx  LibraryRowMenu.tsx  LibraryScanningOverlay.tsx  LibrarySelectBar.tsx  LibrarySelection.css  LibrarySpinePreviewModal.css  LibrarySpinePreviewModal.tsx  LibraryStatCards.tsx  LibraryTable.tsx  LibraryTabs.css  LibraryTagCell.tsx  LibraryTrashModal.tsx  LibraryVersion.css  LibraryVersion.tsx  (+38 more)
src/components/cleanSource/: CleanSourcePicker.tsx  CleanSourceScanOverlay.tsx  CleanSourceTable.tsx  helpers.ts
src/components/preset/: PresetFormTab.tsx
src/components/workspace/: ExportStrategySection.tsx  InputSection.css  InputSection.tsx  LogSection.tsx  OutputSection.tsx  RunDock.tsx
src/i18n/: en.ts  index.ts  types.ts  vi.ts
