[package]
name = "spineforge-x"
version = "0.3.8"
description = "Batch export and version upgrade workflow for Spine projects."
authors = ["SpineForge X"]
license = "MIT"
edition = "2021"

[lib]
name = "spineforge_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.4.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1.43.0", features = ["process", "io-util", "time", "macros", "rt-multi-thread", "sync"] }
walkdir = "2.5.0"
flate2 = "1"
base64 = "0.22"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.3.4"

[dev-dependencies]
proptest = "1"
# The test profile unifies features such that tauri-utils' `schema` feature gets
# enabled without its companion `schemars` feature (an upstream 2.9.2 quirk),
# which fails to compile. Union the `schemars` feature in to keep tests building.
tauri-utils = { version = "2.9.2", features = ["schemars"] }
