[package]
name = "spineforge-x"
version = "0.4.27"
description = "Batch export and version upgrade workflow for Spine projects."
authors = ["SpineForge X"]
license = "MIT"
edition = "2021"

[lib]
name = "spineforge_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.4.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1.43.0", features = ["process", "io-util", "net", "time", "macros", "rt-multi-thread", "sync"] }
walkdir = "2.5.0"
flate2 = "1"
base64 = "0.22"
# Tier B (Google Drive API): native HTTP + OAuth (loopback + PKCE) + secure token storage.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Bounded-concurrency fan-out for batched Drive lookups (buffer_unordered).
futures = "0.3"
# Filesystem watcher for the mounted Shared drive (auto-detect added/removed .spine files).
notify = "6.1"
# `windows-native` is REQUIRED: keyring v3 enables no credential store by default and silently
# falls back to an in-memory mock store, so the refresh token would vanish on app exit.
keyring = { version = "3", features = ["windows-native"] }
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.3.4"

# Windows 11 native window chrome: rounded corners + subtle border via DWM.
# Pinned to the same major as Tauri's own `windows` dep so the HWND type unifies.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

[dev-dependencies]
proptest = "1"
# The test profile unifies features such that tauri-utils' `schema` feature gets
# enabled without its companion `schemars` feature (an upstream 2.9.2 quirk),
# which fails to compile. Union the `schemars` feature in to keep tests building.
tauri-utils = { version = "2.9.2", features = ["schemars"] }
